[gd_scene load_steps=4 format=3 uid="uid://cyscubplv4wq1"]

[ext_resource type="Script" uid="uid://cwammydoi1voc" path="res://Scenes/player.gd" id="1_cvnsp"]
[ext_resource type="Texture2D" uid="uid://cg6oihxt5gdmv" path="res://art.png" id="1_v0iea"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6t5aa"]
size = Vector2(8, 8)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_cvnsp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_6t5aa")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_v0iea")
region_enabled = true
region_rect = Rect2(0, 8, 8, 8)

[node name="LeftPad" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftPad"]
shape = SubResource("RectangleShape2D_6t5aa")

[node name="RightPad" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightPad"]
shape = SubResource("RectangleShape2D_6t5aa")

[node name="JumpPad" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="JumpPad"]
shape = SubResource("RectangleShape2D_6t5aa")

[connection signal="body_entered" from="LeftPad" to="." method="_on_left_pad_body_entered"]
[connection signal="body_entered" from="RightPad" to="." method="_on_right_pad_body_entered"]
[connection signal="body_entered" from="JumpPad" to="." method="_on_jump_pad_body_entered"]
[connection signal="body_exited" from="JumpPad" to="." method="_on_jump_pad_body_exited"]
